# obsi

./: Cargo.toml  README.md  example.ob  test.txt
compiler/: Cargo.toml  example.ob
compiler/src/: main.rs
compiler/src/generator/: generate.rs  symbol_table.rs
compiler/src/parser/: ast.rs  parse.rs
java-parser/: Example.java
java-parser/java/: build.gradle
java-parser/java/gradle/wrapper/: gradle-wrapper.properties
java-parser/java/src/main/java/org/example/: Parser.java
java-parser/rust/: Cargo.toml
java-parser/rust/src/: main.rs
src/: cli.rs  lexer.rs  lib.rs  main.rs  test.txt
src/generator/: builtin.rs  generate.rs  mod.rs  symbol_table.rs
src/parser/: ast.rs  mod.rs  parse.rs
